--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Fri Sep  3 03:12:49 2004  Tim Janik  <timj@gtk.org>
+
+	* zintern/mono-wave.bse: remove useless wave-repo. fixed synth name.
+
 Thu Sep  2 22:50:43 2004  Tim Janik  <timj@gtk.org>
 
 	* bsetrack.[hc]: derive from BSeContextMerger. this turns BseTrack
